Fix sidebar button alignment

--- a/src/app/home/home.scss
+++ b/src/app/home/home.scss
@@ -171,8 +171,9 @@
   a {
     width: 100%;
     min-width: 0;
-    display: inline-block;
-    text-align: left;
+    display: grid;
+    grid-template-columns: 47px auto;
+    justify-content: start;
     white-space: nowrap;
     // Fixed height so text visibility doesn't add pixel
     height: 36px;
@@ -192,7 +193,6 @@
 
     label {
       cursor: pointer;
-      margin: 0 24px;
       display: inline-block;
       max-width: 12ch;
       white-space: nowrap;
